--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Menu-Laboratoria</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
+<body>
+	<nav class="menu flex-container">
+		<ul>
+			<li class="lista"><a href="#">Home</a></li>
+			<li class="lista"><a href="#">About</a></li>
+			<li class="lista"><a href="#">Products</a></li>
+			<li class="lista"><a href="#">Services</a></li>
+			<li class="lista"><a href="#">Customers</a></li>
+			<li class="lista contact"><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	
+</body>
+</html>
