--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Menu-Laboratoria</title>
+	<link href="https://fonts.googleapis.com/css?family=Bubbler+One|Rubik|Vibur" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-	<nav class="menu flex-container">
-		<ul>
+	<div class="menu">Menu</div>
+	<nav class="flex-container">
+		<ul class="esconder">
 			<li class="lista"><a href="#">Home</a></li>
 			<li class="lista"><a href="#">About</a></li>
 			<li class="lista"><a href="#">Products</a></li>
@@ -18,6 +19,6 @@
 			<li class="lista contact"><a href="#">Contact</a></li>
 		</ul>
 	</nav>
-	
+	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
