--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Menu-Laboratoria</title>
-	<link href="https://fonts.googleapis.com/css?family=Bubbler+One|Rubik|Vibur" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC|Montserrat" >
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
-	<div class="menu">Menu</div>
+	<div class="menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
 	<nav class="flex-container">
 		<ul class="esconder">
 			<li class="lista"><a href="#">Home</a></li>
@@ -19,6 +20,7 @@
 			<li class="lista contact"><a href="#">Contact</a></li>
 		</ul>
 	</nav>
+	
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
