--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
-	<div class="menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
+	<div class="menu">Menu</div>
 	<nav class="flex-container">
 		<ul class="esconder">
 			<li class="lista"><a href="#">Home</a></li>
